--- a/app/src/main/res/layout/activity_political_profile_details_edit.xml
+++ b/app/src/main/res/layout/activity_political_profile_details_edit.xml
@@ -54,7 +54,7 @@
                             android:id="@+id/iv_add_img"
                             android:layout_width="@dimen/_65sdp"
                             android:layout_height="@dimen/_65sdp"
-                            android:src="@drawable/profile_pic"
+                            android:src="@drawable/profile_photo"
                             app:civ_border_color="@color/al_gray"
                             app:civ_border_width="@dimen/_1sdp"
 
@@ -113,7 +113,7 @@
                             android:id="@+id/iv_add_img_party"
                             android:layout_width="@dimen/_65sdp"
                             android:layout_height="@dimen/_65sdp"
-                            android:src="@drawable/sanskruti_logo"
+                            android:src="@drawable/political_symbole"
                             app:civ_border_color="@color/al_gray"
                             app:civ_border_width="@dimen/_1sdp"
 
@@ -182,7 +182,7 @@
                                 android:id="@+id/iv_add_img_leader1"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
@@ -241,7 +241,7 @@
                                 android:id="@+id/iv_add_img_leader2"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
@@ -301,7 +301,7 @@
                                 android:id="@+id/iv_add_img_leader3"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
@@ -361,7 +361,7 @@
                                 android:id="@+id/iv_add_img_leader4"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
@@ -423,7 +423,7 @@
                                 android:id="@+id/iv_add_img_leader5"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
@@ -483,7 +483,7 @@
                                 android:id="@+id/iv_add_img_leader6"
                                 android:layout_width="@dimen/_45sdp"
                                 android:layout_height="@dimen/_45sdp"
-                                android:src="@drawable/leader_pic"
+                                android:src="@drawable/leader"
                                 app:civ_border_color="@color/al_gray"
                                 app:civ_border_width="@dimen/_1sdp"
                                 app:civ_shadow="false"
