--- a/app/src/main/res/layout/activity_add_business.xml
+++ b/app/src/main/res/layout/activity_add_business.xml
@@ -43,7 +43,7 @@
                         android:id="@+id/iv_profile"
                         android:layout_width="@dimen/_65sdp"
                         android:layout_height="@dimen/_65sdp"
-                        android:src="@drawable/ic_profile"
+                        android:src="@drawable/business_logo"
                         app:civ_border_color="@color/black"
                         app:civ_border_width="@dimen/_1sdp"
                         app:civ_shadow="false"
