--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -42,7 +42,7 @@
                         android:id="@+id/iv_add_img"
                         android:layout_width="@dimen/_65sdp"
                         android:layout_height="@dimen/_65sdp"
-                        android:src="@drawable/ic_profile"
+                        android:src="@drawable/personal_profile"
                         app:civ_border_color="@color/al_gray"
                         app:civ_border_width="@dimen/_1sdp"
 
