--- a/app/src/main/res/layout/fragment_picked_image_action.xml
+++ b/app/src/main/res/layout/fragment_picked_image_action.xml
@@ -102,6 +102,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_marginVertical="@dimen/_10sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
