--- a/app/src/main/res/layout/item_feature.xml
+++ b/app/src/main/res/layout/item_feature.xml
@@ -16,6 +16,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/_8sdp"
+            android:textStyle="bold"
             android:ellipsize="end"
             android:maxLength="25"
             android:fontFamily="@font/nunito_sans_semibold"
