--- a/app/src/main/res/layout/activity_edit_personal_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_personal_profile_details.xml
@@ -145,8 +145,7 @@
         android:layout_width="match_parent"
         android:layout_height="390dp"
         android:layout_below="@id/header"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="3dp">
+        android:layout_margin="10dp">
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/photoView"
             android:layout_width="match_parent"
