--- a/app/src/main/res/layout/bussiness_frame_1.xml
+++ b/app/src/main/res/layout/bussiness_frame_1.xml
@@ -14,28 +14,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
             android:orientation="vertical">
             <LinearLayout
                 android:id="@+id/linearLogo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingVertical="10dp"
-                android:gravity="center_vertical"
                 android:paddingLeft="20dp"
+                android:gravity="bottom"
                 android:layout_gravity="bottom"
                 android:background="#0b446d"
                 android:visibility="visible">
 
-                <ImageView
-                    android:id="@+id/iv_logo"
+                <View
+                    android:layout_width="100dp"
+                    android:layout_height="@dimen/_70sdp"/>
 
-                    android:layout_width="@dimen/_70sdp"
-                    android:layout_height="@dimen/_70sdp"
-                    android:layout_gravity="center_vertical"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/ic_launcher_foreground"
-                    android:visibility="visible" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -107,7 +103,15 @@
                 android:layout_height="10dp"
                 android:background="#eb8322"/>
         </LinearLayout>
-
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_70sdp"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:visibility="visible" />
 
     </FrameLayout>
 
