--- a/app/src/main/res/layout/political_frame_1.xml
+++ b/app/src/main/res/layout/political_frame_1.xml
@@ -20,15 +20,7 @@
             android:padding="1dp"
             android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/iv_party"
-                android:layout_width="@dimen/_70sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_gravity="bottom"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher_foreground"
-                android:visibility="visible" />
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -73,27 +65,51 @@
                     android:text="Mobile Number"
                     android:textSize="@dimen/_7sdp" />
 
-                <ImageView
-                    android:id="@+id/socialMediaIv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_8sdp"
-                    android:layout_gravity="bottom"
-                    android:visibility="gone"
-                    android:layout_marginTop="3dp"
-                    android:elevation="1dp"
-                    android:src="@drawable/ic_all_social"/>
+
             </LinearLayout>
 
+
+            <ImageView
+                android:id="@+id/socialMediaIv"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_8sdp"
+                android:layout_gravity="bottom"
+                android:visibility="gone"
+                android:layout_marginTop="3dp"
+                android:elevation="1dp"
+                android:src="@drawable/ic_all_social"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_party"
+                android:layout_width="@dimen/_70sdp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_gravity="bottom|left"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher_foreground"
+                android:visibility="visible" />
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
             <ImageView
                 android:id="@+id/iv_logo"
                 android:layout_width="@dimen/_70sdp"
                 android:layout_height="@dimen/_70sdp"
-                android:layout_gravity="bottom"
+                android:layout_gravity="bottom|right"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_foreground"
                 android:visibility="gone" />
         </LinearLayout>
+
 
     </FrameLayout>
 
