--- a/app/src/main/res/layout/political_frame_2.xml
+++ b/app/src/main/res/layout/political_frame_2.xml
@@ -93,15 +93,27 @@
                     android:src="@drawable/ic_all_social"
                     android:visibility="visible" />
             </LinearLayout>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="horizontal">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
             <ImageView
                 android:id="@+id/iv_logo"
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="@dimen/_90sdp"
-                android:layout_gravity="bottom"
+                android:layout_gravity="bottom|end"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_foreground" />
-
         </LinearLayout>
 
     </FrameLayout>
@@ -117,12 +129,20 @@
             android:id="@+id/linearLogoL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="top"
             android:layout_marginLeft="@dimen/_5sdp"
             android:layout_marginBottom="@dimen/_5sdp"
             android:orientation="horizontal"
             android:visibility="visible">
-
+            <ImageView
+                android:id="@+id/iv_party"
+                android:layout_width="@dimen/_70sdp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_gravity="start|top"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher_foreground"
+                android:visibility="visible" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -132,16 +152,7 @@
                 android:visibility="visible"
                 android:weightSum="10">
 
-                <ImageView
-                    android:id="@+id/iv_party"
 
-                    android:layout_width="@dimen/_70sdp"
-                    android:layout_height="@dimen/_70sdp"
-                    android:layout_gravity="bottom"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/ic_launcher_foreground"
-                    android:visibility="visible" />
 
 
                 <LinearLayout
