--- a/app/src/main/res/layout/political_frame_4.xml
+++ b/app/src/main/res/layout/political_frame_4.xml
@@ -31,14 +31,10 @@
             android:padding="1dp"
             android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/iv_party"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_gravity="bottom"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher_foreground" />
+
+            <View
+                android:layout_width="80dp"
+                android:layout_height="1dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -96,12 +92,31 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"/>
-            <ImageView
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            android:gravity="bottom">
+            <ImageView
+                android:id="@+id/iv_party"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_gravity="bottom|left"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher_foreground" />
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
+            <ImageView
                 android:id="@+id/iv_logo"
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="@dimen/_90sdp"
-                android:layout_gravity="bottom"
+                android:layout_gravity="bottom|right"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_foreground"
