--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,7 +87,8 @@
 
     <!-- cyan -->
 
-    <!-- teal -->
+    <!-- whatsapp-color -->
+    <color name="whats_app">#45C153</color>
 
     <!-- green -->
     <color name="green_600">#43a047</color>
