--- a/app/src/main/res/layout/activity_edit_personal_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_personal_profile_details.xml
@@ -1490,7 +1490,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:paddingHorizontal="5dp"
                     android:paddingVertical="@dimen/_5sdp">
 
